testing card structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="card-outer">
+            <div id="card-inner">
+                <div id="front"><img src="assets/images/b99.jpeg"></div>
+                <div id="back"><img src="assets/images/jake.jpeg"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
