--- a/index.html
+++ b/index.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Brooklyn Nine-Nine</title>
+        <!--Botstrap-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+            integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <!--Google Fonts-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+        <!--Favicon - https://www.deviantart.com/dyiddo/art/Brooklyn-Nine-Nine-TV-Series-Folder-Icon-v2-583658677-->
+        <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+        <link rel="stylesheet" href="assets/css/style.css">
+    </head>
 </head>
 <body>
-    <div id="container">
-        <div id="card-outer">
-            <div id="card-inner">
-                <div id="front"><img src="assets/images/b99.jpeg"></div>
-                <div id="back"><img src="assets/images/jake.jpeg"></div>
+    <header>
+        <div class="container">
+            <div class="col-md-12">
+                <h1>Brooklyn Nine-Nine</h1>
             </div>
         </div>
-    </div>
+    </header>
+
+
+    <!--Scripts-->
+    <!--Bootstrap-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+        crossorigin="anonymous"></script>
+        <script src="assets/js/script.js"></script>
 </body>
 </html>
