basic home page layout with text

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
         <div class="container">
             <div class="col-md-12">
                 <h1>Brooklyn Nine-Nine</h1>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="gif">
+                                <div class="card">
+                                    <h2>Memory Game</h2>
+                                 </div>
+                            </div>
+                        </div> 
+                        <div class="col-md-6">
+                            <div class="gif">
+                                <div class="card">
+                                    <h2>Sound Board</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </div>
     </header>
