--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                             <div class="gif">
                                 <div class="card">
                                     <h2>Memory Game</h2>
+                                    <img src="assets/images/games.gif" alt="Brooklyn Nine-Nine">
                                  </div>
                             </div>
                         </div> 
@@ -34,6 +35,7 @@
                             <div class="gif">
                                 <div class="card">
                                     <h2>Sound Board</h2>
+                                    <img src="assets/images/disco.gif" alt="Brooklyn Nine-Nine">
                                 </div>
                             </div>
                         </div>
