adding styling of images on home page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <div class="gif">
                                 <div class="card">
                                     <h2>Memory Game</h2>
-                                    <img src="assets/images/games.gif" alt="Brooklyn Nine-Nine">
+                                    <img src="assets/images/games.gif" class="card-img img-fluid" alt="Brooklyn Nine-Nine">
                                  </div>
                             </div>
                         </div> 
@@ -35,7 +35,7 @@
                             <div class="gif">
                                 <div class="card">
                                     <h2>Sound Board</h2>
-                                    <img src="assets/images/disco.gif" alt="Brooklyn Nine-Nine">
+                                    <img src="assets/images/disco.gif" class="card-img img-fluid" alt="Brooklyn Nine-Nine - Terry">
                                 </div>
                             </div>
                         </div>
