adding buttons to home page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                                 <div class="card">
                                     <h2>Memory Game</h2>
                                     <img src="assets/images/games.gif" class="card-img img-fluid" alt="Brooklyn Nine-Nine">
+                                    <button type="button">START GAME</button>
                                  </div>
                             </div>
                         </div> 
@@ -36,6 +37,7 @@
                                 <div class="card">
                                     <h2>Sound Board</h2>
                                     <img src="assets/images/disco.gif" class="card-img img-fluid" alt="Brooklyn Nine-Nine - Terry">
+                                    <button type="button">GO TO SOUND BOARD</button>
                                 </div>
                             </div>
                         </div>
